force-app/main/default/objects/Tracking_Report__mdt/Tracking_Report__mdt.object-meta.xml
<CustomObject>
    <label>Tracking Report</label>
    <pluralLabel>Tracking Report</pluralLabel>
</CustomObject>