force-app/main/default/objects/Tracking_Report__mdt/fields/CRON_TIME__c.field-meta.xml
<CustomField>
    <fullName>CRON_TIME__c</fullName>
    <label>CRON_TIME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>