force-app/main/default/objects/Tracking_Report__mdt/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <label>Email List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>