force-app/main/default/objects/Tracking_Report__mdt/fields/EmailBodyMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailBodyMessage__c</fullName>
    <label>EmailBodyMessage</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>