force-app/main/default/objects/Tracking_Report__mdt/fields/User_Role_List__c.field-meta.xml
<CustomField>
    <fullName>User_Role_List__c</fullName>
    <label>User Role List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>